# octox

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md
.github/: checkbot.yml  dependabot.yml  labels.yml
.github/workflows/: push-json.yml  push-markdown.yml  push-rust.yml  push-shell.yml  push-yaml.yml
examples/: hello-world.rs
src/: auth.rs  error.rs  github.rs  lib.rs  state.rs  workflow.rs
src/routes/: health.rs  mod.rs  webhook.rs
tests/: health.rs  root.rs  webhook.rs  workflow.rs
tests/fixtures/: check_run.created.json  private-key.pem
