[package]
name = "octox"
version = "0.1.0"
edition = "2021"

description = "A tailor-made web framework for GitHub Apps"
repository = "https://github.com/devxbots/octox"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
    "web"
]

# octox is currently in a prototyping phase, during which we won't release it
# publicly.
publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "hello-world"

[dependencies]
axum = "0.5.6"
hyper = "0.14.18"
secrecy = "0.8.0"
thiserror = "1.0.31"

[dev-dependencies]
dotenv = "0.15.0"
reqwest = "0.11.10"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
