[package]
name = "octox"
version = "0.2.0"
edition = "2021"

description = "A tailor-made web framework for GitHub Apps"
repository = "https://github.com/devxbots/octox"
license = "MIT or Apache-2.0"

categories = [
    "development-tools"
]
keywords = [
    "github",
    "github-app",
    "web"
]

# octox is currently in a prototyping phase, during which we won't release it
# to crates.io yet.
publish = false

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "hello-world"

[dependencies]
github-parts = { git = "https://github.com/devxbots/github-parts", tag = "v0.2.0" }

axum = "0.5.6"
chrono = "0.4.19"
hex = "0.4.3"
hmac = "0.12.1"
hyper = "0.14.18"
jsonwebtoken = "8.1.0"
reqwest = "0.11.10"
secrecy = "0.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sha2 = "0.10.2"
thiserror = "1.0.31"
tower-http = { version = "0.3.3", features = ["trace"] }
tracing = "0.1.34"

[dev-dependencies]
dotenv = "0.15.0"
mockito = "0.31.0"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
